# rustnn

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCS_SUMMARY.md  DOCUMENTATION.md  FLOAT16_STATUS.md  Makefile  README.md  README_PYTHON.md  RELEASE_NOTES_v0.2.0.md  TODO.txt  build.rs  debug_ort_init.py  mkdocs.yml  pyproject.toml  pytest.ini
.claude/plans/: opaque-tensors.md
.github/workflows/: CLAUDE.md  README.md  ci.yml  docs-pr.yml  docs.yml  publish-pypi.yml  publish.yml
docs/: README.md  advanced.md  api-reference.md  architecture.md  chromium-comparison.md  development.md  examples.md  getting-started.md  ggml-integration-guide.md  implementation-status.md  index.md  operator-status.md  quantized-support-plan.md  rustnn-comprehensive-overview.md  wpt-test-guide.md
docs/architecture/: overview.md
docs/development/: CLAUDE.md  implementation-status.md  setup.md
docs/integration/: windows-tensorrt-setup.md
docs/investigations/: coreml-weight-files.md
docs/reference/: ipc-design.md  webnn-spec.md
docs/testing/: performance-benchmarks.md
docs/user-guide/: api-reference.md  examples.md  getting-started.md
examples/: compare_quantization_sizes.py  image_classification.py  kv_cache_device_tensors.py  minilm_embeddings.py  python_matmul.py  python_simple.py  toy_transformer.json
python/webnn/: __init__.py  __init__.pyi  _rustnn.pyi
scripts/: convert_onnx_to_webnn.py  convert_wpt_tests.py  extract_wpt_tests.js  install-git-hooks.sh  update_wpt_tests.sh  validate_coreml.py  validate_onnx.py
scripts/git-hooks/: pre-commit
site/: 404.html  index.html  sitemap.xml
site/advanced/: index.html
site/api-reference/: index.html
site/architecture/: index.html
site/chromium-comparison/: index.html
site/development/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/ggml-integration-guide/: index.html
site/operator-status/: index.html
site/search/: search_index.json
site/tensorrt-integration-guide/: index.html
site/webnn-spec-reference/: index.html
site/wpt-integration-plan/: index.html
src/: CLAUDE.md  error.rs  graph.rs  graphviz.rs  lib.rs  loader.rs  main.rs  protos.rs  shape_inference.rs  tensor.rs  validator.rs  webnn_json.rs
tests/: conftest.py  test_coreml_basic.py  test_device_tensors.py  test_integration.py  test_performance.py  test_python_api.py  test_trtx_converter.rs  test_trtx_execution.rs  test_wpt_conformance.py  wpt_utils.py
(+54 files in other folders)
