[package]
name = "rustnn"
version = "0.1.0"
edition = "2024"

[features]
default = []
coreml-runtime = ["objc"]
onnx-runtime = ["onnxruntime"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
thiserror = "1.0"
base64 = "0.22"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
bytemuck = { version = "1.15", features = ["extern_crate_std"] }
objc = { version = "0.2", optional = true }
onnxruntime = { version = "0.0.14", optional = true }

[build-dependencies]
prost-build = "0.12"

[lib]
doctest = false
